[B]Version 1.2.8 (Oct 8, 2012)[/B]
- Added support for playing back recordings that have multiple segments
- Added "Set Watched" and "Clear Watched" context menu items

[B]Version 1.2.7 (Oct 5, 2012)[/B]
- Added support for background fanart

[B]Version 1.2.6 (Oct 1, 2012)[/B]
- Updated playback path settings to require you to browse for it vs. free-text to ensure the path that is used for live TV playback is correctly formatted
- Added resume/partially watched support (e.g. if you've started to watch a show in SageTV, XBMC will know this and prompt you if you want to resume at the same point in SageTV); note that this does NOT sync the progress or watched status from XBMC back to SageTV

[B]Version 1.2.5 (Sep 25, 2012)[/B]
- Workaround added for network path issues for LiveTV playback (for now)

[B]Version 1.2.4 (Sep 25, 2012)[/B]
- Fixed WOL support
- Added sorting by date to "Watch Recordings"
- Fixed local -> network path substitutions
- Changed "UNC path" to "Network path" in settings

[B]Version 1.2.3 (Sep 24, 2012)[/B]
- Added WOL support

[B]Version 1.2.2 (Sep 20, 2012)[/B]
- Fixed issue with live TV playing back w/ UNC path
- Watched status is pulled from SageTV and set in XBMC (only one way for now... watching a show in XBMC does not sync the status back to SageTV)

[B]Version 1.2.1 (Sep 20, 2012)[/B]
- Localized all GUI strings

[B]Version 1.2.0 (Sep 20, 2012)[/B]
- Updated dependency to use python 2.0 instead of 1.0
- Changed name of addon to all lowercase to be consistent with addon naming requirements

[B]Version 1.1.1 (Sep 19, 2012)[/B]
- Added support to watch an airing live
- Added initial notifications to give feedback after various context menu items are executed (e.g. delete, start recording)
- Updated display text for shows without descriptions or episode titles (e.g. some news and sports shows)
- Updated search to not search within an episode's description field (just search within episode title and show title)
