@@ -34,4 +34,5 @@
     <string id="21021">Playback failed; filesize not big enough for playback</string>
     <string id="21022">Set Watched</string>
     <string id="21023">Clear Watched</string>
+    <string id="21024">Archive</string>
 </strings>
